--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,9 @@
-<h1>Kuruman</h1>
-<p>Roll Over, Autobot!</p>
+<div class="center jumbotron">
+  <h1>Welcome to the Kuruman</h1>
+
+  <h2>Roll Over, Autobot!</h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
+
+<%= link_to image_tag("kuruman.png", alt: "Kuruman logo", width: "87px", height: "111px"), 'https://kuruman.herokuapp.com/' %>
